--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="maincontroller.js"></script>
 </head>
 <body>
-  <div id="content" ng-app="MyTutorialApp" ng-controller="MainController"></div>
+  <div id="content" ng-app="MyTutorialApp" ng-controller="MainController">
+    {{understand}}
+  </div>
 </body>
 </html>
