--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div id="content" ng-app="MyTutorialApp" ng-controller="MainController">
-    {{understand}}
+    <input type="text" ng-model="inputValue">
+    {{inputValue}}
   </div>
 </body>
 </html>
